--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,159 @@
 @use "./base.scss";
+@use "./variables.scss" as *;
 
 // put your custom CSS here!
+.page>#quartz-body .sidebar.left {
+  gap: 10pt !important;
+}
+
+.recent-li {
+  margin: 0 2pt !important;
+
+  h3 {
+    font-size: 1rem !important;
+  }
+
+  .meta {
+    font-size: .95rem !important;
+    margin-bottom: 1pt !important;
+  }
+
+  .tags {
+    display: none !important;
+  }
+}
+
+.caption-img-container {
+  text-align: center !important;
+
+  .caption-img {
+    display: inline-block;
+    text-align: left;
+
+    img {
+      margin: 5px auto 0px auto !important;
+    }
+
+    figcaption {
+      font-style: italic;
+      max-width: fit-content;
+    }
+  }
+}
+
+.header-img {
+  grid-area: 1 / 1;
+  width: 100%;
+  height: 100%;
+
+  img {
+    display: block;
+    object-fit: cover;
+    border-radius: 0px;
+    width: 100%;
+    height: 20vh;
+    max-height: 300px;
+    opacity: 1;
+    object-position: center 20%;
+  }
+}
+
+.darkmode {
+  @media all and not ($mobile) {
+    position: fixed !important;
+    top: 10px !important;
+    left: calc(100% - 40px) !important;
+  }
+}
+
+a, a:hover, a:visited, a:active {
+  color: inherit !important;
+  text-decoration: none;
+}
+
+.page-listing {
+  li {
+    .section {
+      width: 100%;
+      display: grid;
+      grid-template-columns: 15% 45% 40% !important;
+    }
+
+    .section:hover {
+      opacity: 75%;
+    }
+  }
+}
+
+// ===========================
+// Home page
+// ===========================
+$image-radius: 30px;
+
+@mixin mQ($px){
+@media screen and (max-width:$px){
+@content;
+}
+}
+
+section {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  height: auto;
+  width: 100%;
+  gap: 15px;
+  place-content: center;
+  grid-template-rows: 33% 33% 33%;
+  z-index: -5 !important;
+
+  @include mQ(470px){
+    grid-template-columns:repeat(2,1fr);
+    grid-template-rows: repeat(3, 35%);
+  }
+
+  .card {
+    border-radius: $image-radius;
+    height: 200px;
+
+    @include mQ(470px){
+      grid-column: span 1;
+    }
+
+    img {
+      width: 100%;
+      display: block;
+      height: 100%;
+      object-fit: cover;
+      border-radius: $image-radius;
+    }
+
+    .card_img:hover {
+      opacity: 75%;
+    }
+
+    .card_img {
+      position: relative;
+      height: 100%;
+
+      .card_overlay {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        color: #fff;
+        background: linear-gradient(0deg, rgb(0 0 0 / 57%) 0%, rgb(255 255 255 / 0%) 100%);
+        width: 100%;
+        height: 100%;
+        border-radius: $image-radius;
+        display: flex;
+        justify-content: flex-end;
+        flex-direction: column;
+
+        h2 {
+          margin: 10px;
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+// ===========================
