--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -152,6 +152,7 @@ section {
         h2 {
           margin: 10px;
           font-weight: 700;
+          color: #fff !important;
         }
       }
     }
