--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -108,11 +108,6 @@
   }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 // Fix table for list pages (tag pages)
 .page-listing {
   li {
@@ -190,14 +185,46 @@ section {
           font-weight: 700;
           color: #fff !important;
         }
+
+        a {
+          color: inherit !important;
+          text-decoration: none;
+        }
       }
     }
   }
 }
+
+a.external {
+  text-decoration: underline;
+}
+
+// ===========================
+// Scrollbars
+// ===========================
+*::-webkit-scrollbar {
+  background-color: var(--light);
+  width: 6px;
+  margin: 0 2px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--light);
+}
+
+*::-webkit-scrollbar-thumb {
+  max-height: 20px !important;
+  border-radius: 16px;
+  background-color: #babac0;
+}
+
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
 // ===========================
 // Modifiers
 // ===========================
-
 .w-25 {
   width: 25% !important;
 }
