--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -8,6 +8,11 @@
   gap: 10pt !important;
 }
 
+.page>#quartz-body .center {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .recent-li {
   margin: 0 2pt !important;
 
