Fixed justification and page links

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -8,9 +8,8 @@
   gap: 10pt !important;
 }
 
-.page>#quartz-body .center {
-  text-align: justify;
-  text-justify: inter-word;
+p {
+  text-align: justify !important;
 }
 
 .recent-li {
